Change REST API specification
