# app.py
@@ -1,15 +1,13 @@
-
-from flask import Flask, jsonify
+from flask import Flask, jsonify, render_template
 from flask_migrate import Migrate
 from flask_swagger_ui import get_swaggerui_blueprint
 from werkzeug.exceptions import HTTPException
-
+import static
 from controllers.note_routes import blp as note_blp
 from controllers.user_routes import blp as user_blp
 from database import db
 
-
-app = Flask(__name__)
+app = Flask(__name__, static_url_path='/static', static_folder='static')
 app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///NoticeBoard.db'
 app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
 
@@ -25,6 +23,12 @@ swaggerui_blueprint = get_swaggerui_blueprint(
         'app_name': "NoticeBoard API"
     }
 )
+
+@app.route('/')
+def index():
+    return render_template('index.html')
+
+
 @app.errorhandler(Exception)
 def handle_error(e):
     code = 500
@@ -32,10 +36,10 @@ def handle_error(e):
         code = e.code
     return jsonify(error=str(e)), code
 
-app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
-app.register_blueprint(user_blp, url_prefix='/api/v1/user')
-app.register_blueprint(note_blp, url_prefix='/api/v1/note')
 
+app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
+app.register_blueprint(user_blp, url_prefix='/api/v1/users')
+app.register_blueprint(note_blp, url_prefix='/api/v1/notes')
 
 if __name__ == '__main__':
     with app.app_context():
